--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ beautifulsoup4==4.12.3
 google-generativeai==0.8.1
 grpcio-status==1.66.1
 python-dotenv==1.0.1
-
-reflex==0.6.0
+watchdog==4.0.2
+watchfiles==0.24.0
